[gd_scene load_steps=17 format=2]

[ext_resource path="res://World.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/PAUSESCREN.gd" type="Script" id=2]
[ext_resource path="res://assets/Montserrat-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/sacrifices.gd" type="Script" id=4]
[ext_resource path="res://fonts/Some Time Later.otf" type="DynamicFontData" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 75, 1, 75 )

[sub_resource type="CylinderShape" id=2]
radius = 10.0
height = 10.0

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.396078, 0.396078, 0.396078, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.396078, 0.396078, 0.396078, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[node name="Game" type="Spatial"]

[node name="World" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0945435, 0.591749, 0.0157356 )

[node name="DeathZone" type="Area" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )

[node name="belowWorld" type="CollisionShape" parent="World/DeathZone"]
shape = SubResource( 1 )
disabled = true

[node name="canotime" type="Area" parent="World"]

[node name="InCano" type="CollisionShape" parent="World/canotime"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0 )
shape = SubResource( 2 )
script = ExtResource( 4 )

[node name="cakeCount" type="Label" parent="World/canotime/InCano"]
margin_left = 20.0
margin_top = 20.0
margin_right = 158.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CAKE   / "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cakeCurrent" type="Label" parent="World/canotime/InCano/cakeCount"]
margin_left = 95.0
margin_right = 233.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cakeTotal" type="Label" parent="World/canotime/InCano/cakeCount"]
margin_left = 140.0
margin_right = 278.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Q"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerCount" type="Label" parent="World/canotime/InCano"]
margin_left = 20.0
margin_top = 60.0
margin_right = 158.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SACRIFICES   / "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerCurrent" type="Label" parent="World/canotime/InCano/playerCount"]
margin_left = 185.0
margin_right = 323.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerTotal" type="Label" parent="World/canotime/InCano/playerCount"]
margin_left = 235.0
margin_right = 373.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Q"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="World/canotime/InCano"]
wait_time = 2.0
one_shot = true

[node name="pauseholder" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="PAUSESCREN" type="Control" parent="pauseholder"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="darkoverlay" type="ColorRect" parent="pauseholder/PAUSESCREN"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.411765, 0.411765, 0.411765, 0.305882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="pauseholder/PAUSESCREN/darkoverlay"]
margin_left = 545.0
margin_top = 335.0
margin_right = 770.0
margin_bottom = 485.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="pauseholder/PAUSESCREN/darkoverlay/VBoxContainer"]
margin_top = 17.0
margin_right = 225.0
margin_bottom = 43.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.580392, 0.580392, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.960784, 0.960784, 1 )
text = "Resume"

[node name="restart" type="Button" parent="pauseholder/PAUSESCREN/darkoverlay/VBoxContainer"]
margin_top = 47.0
margin_right = 225.0
margin_bottom = 73.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.580392, 0.580392, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.960784, 0.960784, 1 )
text = "Restart Level"

[node name="Back" type="Button" parent="pauseholder/PAUSESCREN/darkoverlay/VBoxContainer"]
margin_top = 77.0
margin_right = 225.0
margin_bottom = 103.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.580392, 0.580392, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.960784, 0.960784, 1 )
text = "Back to Start"

[node name="quit" type="Button" parent="pauseholder/PAUSESCREN/darkoverlay/VBoxContainer"]
margin_top = 107.0
margin_right = 225.0
margin_bottom = 133.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.580392, 0.580392, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.960784, 0.960784, 1 )
text = "Quit"
[connection signal="body_entered" from="World/DeathZone" to="World" method="_on_DeathZone_body_entered"]
[connection signal="body_entered" from="World/canotime" to="World" method="_on_canotime_body_entered"]
[connection signal="timeout" from="World/canotime/InCano/Timer" to="World/canotime/InCano" method="_timeout"]
[connection signal="pressed" from="pauseholder/PAUSESCREN/darkoverlay/VBoxContainer/resume" to="pauseholder/PAUSESCREN" method="_on_resume_pressed"]
[connection signal="pressed" from="pauseholder/PAUSESCREN/darkoverlay/VBoxContainer/restart" to="pauseholder/PAUSESCREN" method="_on_restart_pressed"]
[connection signal="pressed" from="pauseholder/PAUSESCREN/darkoverlay/VBoxContainer/Back" to="pauseholder/PAUSESCREN" method="_on_Back_pressed"]
[connection signal="pressed" from="pauseholder/PAUSESCREN/darkoverlay/VBoxContainer/quit" to="pauseholder/PAUSESCREN" method="_on_quit_pressed"]
